fixes #394 measurement tools overlap

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -412,6 +412,10 @@ textarea.materialize-textarea+label:after {
   top: -85px !important;
 }
 
+.maphubs-measure-tool-search-button {
+  right: 258px !important;
+}
+
 .mapboxgl-ctrl-maphubs-edit-tool {
     right: 195px !important;
     top: -70px !important;
